<resources>
    <string name="app_name">DaHydroApp</string>
    <string name="da_hydro_app">Da Hydro App</string>
    <string name="byor_button">Build Your Own Room</string>
    <string name="compare_button">Compare Items</string>
    <string name="message_button">Ask Us Anything</string>
    <string name="admin_button">Owner Mode</string>
    <string name="height">Height:</string>
    <string name="length">Length:</string>
    <string name="width">Width:</string>
    <string name="submit">Submit</string>
    <string name="feet_hint">How many feet?</string>
    <string name="roomdimens">Room Dimensions</string>
    <string name="user_info">User Information</string>
    <string name="user_email">Email Address:</string>
    <string name="email_hint">Enter your email address</string>
    <string name="compare_title">Compare 2 Items</string>
    <string name="onhand_text">Would you like to see current on-hand items or all items?</string>
    <string name="type_select">Pick a category:</string>
    <string name="item1_select">Select 1st Item:</string>
    <string name="item2_select">Select 2nd Item:</string>
    <string name="message_text_view">Message:</string>
    <string name="message_edit_hint">Enter your question or comment</string>
    <string name="authentication_text">Authentication Required</string>
    <string name="username_text">Username:</string>
    <string name="password_text">Password:</string>
    <string name="admin_messages_button">See Messages</string>
    <string name="admin_popular_button">See most popular items</string>
    <string name="admin_notification_button">Set a notification</string>
    <string name="lighting_layout_text">Lighting Configuration</string>
    <string name="col_lights_hint">How many columns?</string>
    <string name="col_lights_text"># of light columns:</string>
    <string name="row_lights_hint">How many rows?</string>
    <string name="row_lights_text"># of light rows:</string>
    <string name="notification_text">Notification:</string>
    <string name="notification_button">Set Notification</string>
    <string name="front_view_text">Front View</string>
    <string name="top_view_text">Top View</string>
    <string name="side_view_text">Side View</string>
    <string name="byor_text">Build Your Own Room</string>
    <string name="byor_lamp_text">Lamps:</string>
    <string name="byor_ballast_text">Ballasts:</string>
    <string name="byor_container_text">Containers:</string>
    <string name="byor_soil_text">Soil:</string>
    <string name="byor_nutrients_text">Nutrients:</string>
    <string name="byor_ac_text">Climate Control:</string>
    <string name="byor_dehumidifier_text">Dehumidifier:</string>
    <string name="byor_submit">Get Total Cost</string>
    <string name="byor_item_text">Items to choose from:</string>
    <string name="byor_qty_text">QTY:</string>
    <string name="message_text">Comments, Questions or Suggestions</string>
</resources>
