<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".com.dahydroshop.android.dahydroapp.notdone.ByorInfoActivity">

        <TextView
            android:id="@+id/user_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_info"
            android:textSize="40sp"
            android:gravity="center"
            android:layout_alignParentTop="true"/>
        <LinearLayout
            android:id="@+id/user_info_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/user_info">
            <TextView
                android:text="@string/user_email"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>
            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/user_email"
                android:inputType="textEmailAddress"
                android:hint="@string/email_hint"/>
        </LinearLayout>
        <TextView
            android:layout_below="@id/user_info_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/roomdimens"
            android:textSize="@dimen/title_size"
            android:gravity="center"
            android:id="@+id/room_dimen"/>
        <LinearLayout
            android:id="@+id/height_layout"
            android:layout_below="@id/room_dimen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:text="@string/height"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>
            <EditText
                android:id="@+id/height"
                android:inputType="numberDecimal"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:hint="@string/feet_hint"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/length_layout"
            android:layout_below="@id/height_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:text="@string/length"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>
            <EditText
                android:id="@+id/length"
                android:inputType="numberDecimal"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:hint="@string/feet_hint"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/width_layout"
            android:layout_below="@id/length_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:text="@string/width"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>
            <EditText
                android:id="@+id/width"
                android:inputType="numberDecimal"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="@string/feet_hint"/>
        </LinearLayout>
        <TextView
            android:layout_below="@id/width_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lighting_layout_text"
            android:textSize="@dimen/title_size"
            android:gravity="center"
            android:id="@+id/lighting_layout_text"/>
        <LinearLayout
            android:layout_below="@id/lighting_layout_text"
            android:id="@+id/col_lights_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:text="@string/col_lights_text"
                android:layout_height="match_parent"
                android:layout_width="wrap_content"/>
            <EditText
                android:id="@+id/col_lights_edit"
                android:inputType="numberDecimal"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="@string/col_lights_hint"/>

        </LinearLayout>
        <LinearLayout
            android:layout_below="@id/col_lights_layout"
            android:id="@+id/row_lights_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:text="@string/row_lights_text"
                android:layout_height="match_parent"
                android:layout_width="wrap_content"/>
            <EditText
                android:id="@+id/row_lights_edit"
                android:inputType="numberDecimal"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="@string/row_lights_hint"/>

        </LinearLayout>

        <Button
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:id="@+id/submit_button"
            android:text="@string/submit"
            android:background="@color/colorAccent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>
    </RelativeLayout>
</ScrollView>