<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".MessageActivity">
    <TextView
        android:text="@string/message_text"
        android:id="@+id/message_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/title_size"
        android:gravity="center"/>
    <LinearLayout
        android:id="@+id/user_info_layout"
        android:layout_below="@id/message_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:text="@string/user_email"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>
        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/message_user_email"
            android:inputType="textEmailAddress"
            android:hint="@string/email_hint"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/message_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_info_layout">
        <TextView
            android:id="@+id/message_text_view"
            android:text="@string/message_text_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>
        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/message_edit"
            android:inputType="textShortMessage"
            android:hint="@string/message_edit_hint"/>
    </LinearLayout>
    <Button
        android:id="@+id/message_submit_button"
        android:text="@string/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"/>
</RelativeLayout>