<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">

    <LinearLayout android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content">
        <TextView
            android:text="@string/byor_text"
            android:id="@+id/byor_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/title_size"
            android:gravity="center"/>

        <Spinner
            android:id="@+id/item_select_spinner"
            android:prompt="@string/onhand_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        </Spinner>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:text="@string/byor_lamp_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <Spinner
                android:id="@+id/byor_lamp_spinner"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">
            </Spinner>
            <TextView
                android:text="@string/byor_qty_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/byor_lamps_edit"
                android:inputType="number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/byor_ballast_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <Spinner
                android:id="@+id/byor_ballast_spinner"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">

            </Spinner>
            <TextView
                android:text="@string/byor_qty_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/byor_ballast_edit"
                android:inputType="number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/byor_container_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <Spinner
                android:id="@+id/byor_container_spinner"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">

            </Spinner>
            <TextView
                android:text="@string/byor_qty_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/byor_container_edit"
                android:layout_width="wrap_content"
                android:inputType="number"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/byor_soil_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <Spinner
                android:id="@+id/byor_soil_spinner"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">

            </Spinner>
            <TextView
                android:text="@string/byor_qty_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/byor_soil_edit"
                android:layout_width="wrap_content"
                android:inputType="number"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/byor_nutrients_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <Spinner
                android:id="@+id/byor_nutrients_spinner"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">

            </Spinner>
            <TextView
                android:text="@string/byor_qty_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/byor_nutrients_edit"
                android:layout_width="wrap_content"
                android:inputType="number"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/byor_ac_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <Spinner
                android:id="@+id/byor_climate_spinner"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">

            </Spinner>
            <TextView
                android:text="@string/byor_qty_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/byor_climate_edit"
                android:inputType="number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <Button
            android:id="@+id/byor_submit"
            android:text="@string/byor_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>
</ScrollView>