<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".CompareActivity">
    <TextView
        android:id="@+id/compare_title"
        android:text="@string/compare_title"
        android:gravity="center"
        android:textSize="@dimen/title_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Spinner
        android:id="@+id/onhand_spinner"
        android:layout_below="@id/compare_title"
        android:prompt="@string/onhand_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

    </Spinner>
    <LinearLayout
        android:id="@+id/type_layout"
        android:layout_below="@id/onhand_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/type_select"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>
        <Spinner
            android:id="@+id/type_spinner"
            android:prompt="@string/type_select"
            android:layout_width="fill_parent"
            android:layout_height="match_parent">

        </Spinner>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/item1_layout"
        android:layout_below="@id/type_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/item1_select"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>
        <Spinner
            android:id="@+id/item1_spinner"
            android:prompt="@string/item1_select"
            android:layout_width="fill_parent"
            android:layout_height="match_parent">

        </Spinner>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/item2_layout"
        android:layout_below="@id/item1_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/item2_select"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>
        <Spinner
            android:id="@+id/item2_spinner"
            android:prompt="@string/item2_select"
            android:layout_width="fill_parent"
            android:layout_height="match_parent">

        </Spinner>
    </LinearLayout>
    <LinearLayout
        android:layout_below="@id/item2_layout"
        android:id="@+id/descriptions"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/item1_text"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
        <TextView
            android:id="@+id/item2_text"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>


    </LinearLayout>

</RelativeLayout>