<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".AdminActivity">
    <TextView
        android:id="@+id/authentication_text"
        android:text="@string/authentication_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textSize="@dimen/title_size"/>
    <TextView
        android:id="@+id/username_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username_text"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="25dp"
        android:layout_marginStart="25dp"
        android:textSize="20sp"
        android:layout_below="@id/authentication_text"/>
    <TextView
        android:id="@+id/password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_text"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="25dp"
        android:layout_marginStart="25dp"
        android:textSize="20sp"
        android:layout_below="@id/username_text"/>
    <EditText
        android:id="@+id/username_edit"
        android:inputType="text"
        android:layout_alignBottom="@id/username_text"
        android:layout_toRightOf="@id/username_text"
        android:layout_toEndOf="@id/username_text"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/password_edit"
        android:inputType="textPassword"
        android:layout_alignBottom="@id/password_text"
        android:layout_toRightOf="@id/password_text"
        android:layout_toEndOf="@id/password_text"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/admin_submit"
        android:text="@string/submit"
        android:layout_below="@id/password_edit"
        android:layout_centerHorizontal="true"
        android:layout_margin="25dp"
        android:layout_marginTop="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</RelativeLayout>